--- a/.config
+++ b/.config
@@ -164,9 +164,9 @@ CONFIG_TARGET_ROOTFS_PARTNAME=""
 # Global build settings
 #
 # CONFIG_JSON_OVERVIEW_IMAGE_INFO is not set
-# CONFIG_ALL_NONSHARED is not set
-# CONFIG_ALL_KMODS is not set
-# CONFIG_ALL is not set
+CONFIG_ALL_NONSHARED=y
+CONFIG_ALL_KMODS=y
+CONFIG_ALL=y
 # CONFIG_BUILDBOT is not set
 CONFIG_SIGNED_PACKAGES=y
 CONFIG_SIGNATURE_CHECK=y
@@ -3935,7 +3935,6 @@ CONFIG_PACKAGE_libf2fs=y
 # CONFIG_PACKAGE_libfdt is not set
 # CONFIG_PACKAGE_libffi is not set
 # CONFIG_PACKAGE_libffmpeg-audio-dec is not set
-# CONFIG_PACKAGE_libffmpeg-custom is not set
 CONFIG_FFMPEG_X86ASM=y
 # CONFIG_PACKAGE_libffmpeg-full is not set
 # CONFIG_PACKAGE_libffmpeg-mini is not set
@@ -4474,139 +4473,139 @@ CONFIG_PACKAGE_luci-lib-nixio_notls=y
 # CONFIG_PACKAGE_luci-lib-px5g is not set
 # end of 6. Libraries
 
-# CONFIG_PACKAGE_luci-i18n-base-ar is not set
-# CONFIG_PACKAGE_luci-i18n-base-bg is not set
-# CONFIG_PACKAGE_luci-i18n-base-bn is not set
-# CONFIG_PACKAGE_luci-i18n-base-ca is not set
-# CONFIG_PACKAGE_luci-i18n-base-cs is not set
-# CONFIG_PACKAGE_luci-i18n-base-da is not set
-# CONFIG_PACKAGE_luci-i18n-base-de is not set
-# CONFIG_PACKAGE_luci-i18n-base-el is not set
-# CONFIG_PACKAGE_luci-i18n-base-en is not set
-# CONFIG_PACKAGE_luci-i18n-base-es is not set
-# CONFIG_PACKAGE_luci-i18n-base-fi is not set
-# CONFIG_PACKAGE_luci-i18n-base-fr is not set
-# CONFIG_PACKAGE_luci-i18n-base-he is not set
-# CONFIG_PACKAGE_luci-i18n-base-hi is not set
-# CONFIG_PACKAGE_luci-i18n-base-hu is not set
-# CONFIG_PACKAGE_luci-i18n-base-it is not set
-# CONFIG_PACKAGE_luci-i18n-base-ja is not set
-# CONFIG_PACKAGE_luci-i18n-base-ko is not set
-# CONFIG_PACKAGE_luci-i18n-base-mr is not set
-# CONFIG_PACKAGE_luci-i18n-base-ms is not set
-# CONFIG_PACKAGE_luci-i18n-base-nl is not set
-# CONFIG_PACKAGE_luci-i18n-base-no is not set
-# CONFIG_PACKAGE_luci-i18n-base-pl is not set
-# CONFIG_PACKAGE_luci-i18n-base-pt is not set
-# CONFIG_PACKAGE_luci-i18n-base-pt-br is not set
-# CONFIG_PACKAGE_luci-i18n-base-ro is not set
-# CONFIG_PACKAGE_luci-i18n-base-ru is not set
-# CONFIG_PACKAGE_luci-i18n-base-sk is not set
-# CONFIG_PACKAGE_luci-i18n-base-sv is not set
-# CONFIG_PACKAGE_luci-i18n-base-tr is not set
-# CONFIG_PACKAGE_luci-i18n-base-uk is not set
-# CONFIG_PACKAGE_luci-i18n-base-vi is not set
+CONFIG_PACKAGE_luci-i18n-base-ar=m
+CONFIG_PACKAGE_luci-i18n-base-bg=m
+CONFIG_PACKAGE_luci-i18n-base-bn=m
+CONFIG_PACKAGE_luci-i18n-base-ca=m
+CONFIG_PACKAGE_luci-i18n-base-cs=m
+CONFIG_PACKAGE_luci-i18n-base-da=m
+CONFIG_PACKAGE_luci-i18n-base-de=m
+CONFIG_PACKAGE_luci-i18n-base-el=m
+CONFIG_PACKAGE_luci-i18n-base-en=m
+CONFIG_PACKAGE_luci-i18n-base-es=m
+CONFIG_PACKAGE_luci-i18n-base-fi=m
+CONFIG_PACKAGE_luci-i18n-base-fr=m
+CONFIG_PACKAGE_luci-i18n-base-he=m
+CONFIG_PACKAGE_luci-i18n-base-hi=m
+CONFIG_PACKAGE_luci-i18n-base-hu=m
+CONFIG_PACKAGE_luci-i18n-base-it=m
+CONFIG_PACKAGE_luci-i18n-base-ja=m
+CONFIG_PACKAGE_luci-i18n-base-ko=m
+CONFIG_PACKAGE_luci-i18n-base-mr=m
+CONFIG_PACKAGE_luci-i18n-base-ms=m
+CONFIG_PACKAGE_luci-i18n-base-nl=m
+CONFIG_PACKAGE_luci-i18n-base-no=m
+CONFIG_PACKAGE_luci-i18n-base-pl=m
+CONFIG_PACKAGE_luci-i18n-base-pt=m
+CONFIG_PACKAGE_luci-i18n-base-pt-br=m
+CONFIG_PACKAGE_luci-i18n-base-ro=m
+CONFIG_PACKAGE_luci-i18n-base-ru=m
+CONFIG_PACKAGE_luci-i18n-base-sk=m
+CONFIG_PACKAGE_luci-i18n-base-sv=m
+CONFIG_PACKAGE_luci-i18n-base-tr=m
+CONFIG_PACKAGE_luci-i18n-base-uk=m
+CONFIG_PACKAGE_luci-i18n-base-vi=m
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-base-zh-tw is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-ar is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-bg is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-bn is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-ca is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-cs is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-da is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-de is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-el is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-en is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-es is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-fi is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-fr is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-he is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-hi is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-hu is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-it is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-ja is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-ko is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-mr is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-ms is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-no is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-pl is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-pt is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-pt-br is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-ro is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-ru is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-sk is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-sv is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-tr is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-uk is not set
-# CONFIG_PACKAGE_luci-i18n-firewall-vi is not set
+CONFIG_PACKAGE_luci-i18n-base-zh-tw=m
+CONFIG_PACKAGE_luci-i18n-firewall-ar=m
+CONFIG_PACKAGE_luci-i18n-firewall-bg=m
+CONFIG_PACKAGE_luci-i18n-firewall-bn=m
+CONFIG_PACKAGE_luci-i18n-firewall-ca=m
+CONFIG_PACKAGE_luci-i18n-firewall-cs=m
+CONFIG_PACKAGE_luci-i18n-firewall-da=m
+CONFIG_PACKAGE_luci-i18n-firewall-de=m
+CONFIG_PACKAGE_luci-i18n-firewall-el=m
+CONFIG_PACKAGE_luci-i18n-firewall-en=m
+CONFIG_PACKAGE_luci-i18n-firewall-es=m
+CONFIG_PACKAGE_luci-i18n-firewall-fi=m
+CONFIG_PACKAGE_luci-i18n-firewall-fr=m
+CONFIG_PACKAGE_luci-i18n-firewall-he=m
+CONFIG_PACKAGE_luci-i18n-firewall-hi=m
+CONFIG_PACKAGE_luci-i18n-firewall-hu=m
+CONFIG_PACKAGE_luci-i18n-firewall-it=m
+CONFIG_PACKAGE_luci-i18n-firewall-ja=m
+CONFIG_PACKAGE_luci-i18n-firewall-ko=m
+CONFIG_PACKAGE_luci-i18n-firewall-mr=m
+CONFIG_PACKAGE_luci-i18n-firewall-ms=m
+CONFIG_PACKAGE_luci-i18n-firewall-no=m
+CONFIG_PACKAGE_luci-i18n-firewall-pl=m
+CONFIG_PACKAGE_luci-i18n-firewall-pt=m
+CONFIG_PACKAGE_luci-i18n-firewall-pt-br=m
+CONFIG_PACKAGE_luci-i18n-firewall-ro=m
+CONFIG_PACKAGE_luci-i18n-firewall-ru=m
+CONFIG_PACKAGE_luci-i18n-firewall-sk=m
+CONFIG_PACKAGE_luci-i18n-firewall-sv=m
+CONFIG_PACKAGE_luci-i18n-firewall-tr=m
+CONFIG_PACKAGE_luci-i18n-firewall-uk=m
+CONFIG_PACKAGE_luci-i18n-firewall-vi=m
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-firewall-zh-tw is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-ar is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-bg is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-bn is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-ca is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-cs is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-da is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-de is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-el is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-en is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-es is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-fi is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-fr is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-he is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-hi is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-hu is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-it is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-ja is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-ko is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-mr is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-ms is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-no is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-pl is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-pt is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-pt-br is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-ro is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-ru is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-sk is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-sv is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-tr is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-uk is not set
-# CONFIG_PACKAGE_luci-i18n-frpc-vi is not set
+CONFIG_PACKAGE_luci-i18n-firewall-zh-tw=m
+CONFIG_PACKAGE_luci-i18n-frpc-ar=m
+CONFIG_PACKAGE_luci-i18n-frpc-bg=m
+CONFIG_PACKAGE_luci-i18n-frpc-bn=m
+CONFIG_PACKAGE_luci-i18n-frpc-ca=m
+CONFIG_PACKAGE_luci-i18n-frpc-cs=m
+CONFIG_PACKAGE_luci-i18n-frpc-da=m
+CONFIG_PACKAGE_luci-i18n-frpc-de=m
+CONFIG_PACKAGE_luci-i18n-frpc-el=m
+CONFIG_PACKAGE_luci-i18n-frpc-en=m
+CONFIG_PACKAGE_luci-i18n-frpc-es=m
+CONFIG_PACKAGE_luci-i18n-frpc-fi=m
+CONFIG_PACKAGE_luci-i18n-frpc-fr=m
+CONFIG_PACKAGE_luci-i18n-frpc-he=m
+CONFIG_PACKAGE_luci-i18n-frpc-hi=m
+CONFIG_PACKAGE_luci-i18n-frpc-hu=m
+CONFIG_PACKAGE_luci-i18n-frpc-it=m
+CONFIG_PACKAGE_luci-i18n-frpc-ja=m
+CONFIG_PACKAGE_luci-i18n-frpc-ko=m
+CONFIG_PACKAGE_luci-i18n-frpc-mr=m
+CONFIG_PACKAGE_luci-i18n-frpc-ms=m
+CONFIG_PACKAGE_luci-i18n-frpc-no=m
+CONFIG_PACKAGE_luci-i18n-frpc-pl=m
+CONFIG_PACKAGE_luci-i18n-frpc-pt=m
+CONFIG_PACKAGE_luci-i18n-frpc-pt-br=m
+CONFIG_PACKAGE_luci-i18n-frpc-ro=m
+CONFIG_PACKAGE_luci-i18n-frpc-ru=m
+CONFIG_PACKAGE_luci-i18n-frpc-sk=m
+CONFIG_PACKAGE_luci-i18n-frpc-sv=m
+CONFIG_PACKAGE_luci-i18n-frpc-tr=m
+CONFIG_PACKAGE_luci-i18n-frpc-uk=m
+CONFIG_PACKAGE_luci-i18n-frpc-vi=m
 CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-frpc-zh-tw is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-ar is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-bg is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-bn is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-ca is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-cs is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-da is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-de is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-el is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-en is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-es is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-fi is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-fr is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-he is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-hi is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-hu is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-it is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-ja is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-ko is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-mr is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-ms is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-no is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-pl is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-pt is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-pt-br is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-ro is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-ru is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-sk is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-sv is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-tr is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-uk is not set
-# CONFIG_PACKAGE_luci-i18n-opkg-vi is not set
+CONFIG_PACKAGE_luci-i18n-frpc-zh-tw=m
+CONFIG_PACKAGE_luci-i18n-opkg-ar=m
+CONFIG_PACKAGE_luci-i18n-opkg-bg=m
+CONFIG_PACKAGE_luci-i18n-opkg-bn=m
+CONFIG_PACKAGE_luci-i18n-opkg-ca=m
+CONFIG_PACKAGE_luci-i18n-opkg-cs=m
+CONFIG_PACKAGE_luci-i18n-opkg-da=m
+CONFIG_PACKAGE_luci-i18n-opkg-de=m
+CONFIG_PACKAGE_luci-i18n-opkg-el=m
+CONFIG_PACKAGE_luci-i18n-opkg-en=m
+CONFIG_PACKAGE_luci-i18n-opkg-es=m
+CONFIG_PACKAGE_luci-i18n-opkg-fi=m
+CONFIG_PACKAGE_luci-i18n-opkg-fr=m
+CONFIG_PACKAGE_luci-i18n-opkg-he=m
+CONFIG_PACKAGE_luci-i18n-opkg-hi=m
+CONFIG_PACKAGE_luci-i18n-opkg-hu=m
+CONFIG_PACKAGE_luci-i18n-opkg-it=m
+CONFIG_PACKAGE_luci-i18n-opkg-ja=m
+CONFIG_PACKAGE_luci-i18n-opkg-ko=m
+CONFIG_PACKAGE_luci-i18n-opkg-mr=m
+CONFIG_PACKAGE_luci-i18n-opkg-ms=m
+CONFIG_PACKAGE_luci-i18n-opkg-no=m
+CONFIG_PACKAGE_luci-i18n-opkg-pl=m
+CONFIG_PACKAGE_luci-i18n-opkg-pt=m
+CONFIG_PACKAGE_luci-i18n-opkg-pt-br=m
+CONFIG_PACKAGE_luci-i18n-opkg-ro=m
+CONFIG_PACKAGE_luci-i18n-opkg-ru=m
+CONFIG_PACKAGE_luci-i18n-opkg-sk=m
+CONFIG_PACKAGE_luci-i18n-opkg-sv=m
+CONFIG_PACKAGE_luci-i18n-opkg-tr=m
+CONFIG_PACKAGE_luci-i18n-opkg-uk=m
+CONFIG_PACKAGE_luci-i18n-opkg-vi=m
 CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-opkg-zh-tw is not set
+CONFIG_PACKAGE_luci-i18n-opkg-zh-tw=m
 # end of LuCI
 
 #
